addressed the overflow issue

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <div class="project-card">
           <h3>Project 1</h3>
           <p>A responsive form built with HTML and CSS.</p>
-          <iframe src="form.html" title="Responsive Form" style="width: 120%; height: 800px; border: none;"></iframe>
+          <iframe src="form.html" title="Responsive Form" class="responsive-iframe"></iframe>
         </div>
         <div class="project-card">
           <h3>Project 2</h3>
           <p>An interactive portfolio.</p>
-          <iframe src="portfolio.html" title="Interactive Portfolio" style="width: 100%; height: 800px; border: none;"></iframe>
+          <iframe src="portfolio.html" title="Interactive Portfolio" class="responsive-iframe"></iframe>
         </div>
       </div>
     </section>
