--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Home Section -->
     <section id="home">
       <div class="profile-container">
-        <img src="photos/joel.jpg" alt="Profile Picture" class="profile-img">
+        <img src="photos/joell.png" alt="Profile Picture" class="profile-img">
         <h1>Joel Ngari</h1>
         <p>I am a Front-end Developer</p>
       </div>
